# fetch_me

./: Cargo.toml
fetcher/: Cargo.toml  README.md
src/: checksum.rs  lib.rs
src/systems/: fetcher.rs
